// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create stablecoin page: Create stablecoin page with connected state: "Initial Details" step: Snapshot 1`] = `
<div>
  <style>
    [data-dapp-kit] {--dapp-kit-blurs-modalOverlay:blur(0);--dapp-kit-backgroundColors-primaryButton:#F6F7F9;--dapp-kit-backgroundColors-primaryButtonHover:#F0F2F5;--dapp-kit-backgroundColors-outlineButtonHover:#F4F4F5;--dapp-kit-backgroundColors-modalOverlay:rgba(24 36 53 / 20%);--dapp-kit-backgroundColors-modalPrimary:white;--dapp-kit-backgroundColors-modalSecondary:#F7F8F8;--dapp-kit-backgroundColors-iconButton:transparent;--dapp-kit-backgroundColors-iconButtonHover:#F0F1F2;--dapp-kit-backgroundColors-dropdownMenu:#FFFFFF;--dapp-kit-backgroundColors-dropdownMenuSeparator:#F3F6F8;--dapp-kit-backgroundColors-walletItemSelected:white;--dapp-kit-backgroundColors-walletItemHover:#3C424226;--dapp-kit-borderColors-outlineButton:#E4E4E7;--dapp-kit-colors-primaryButton:#373737;--dapp-kit-colors-outlineButton:#373737;--dapp-kit-colors-iconButton:#000000;--dapp-kit-colors-body:#182435;--dapp-kit-colors-bodyMuted:#767A81;--dapp-kit-colors-bodyDanger:#FF794B;--dapp-kit-radii-small:6px;--dapp-kit-radii-medium:8px;--dapp-kit-radii-large:12px;--dapp-kit-radii-xlarge:16px;--dapp-kit-shadows-primaryButton:0px 4px 12px rgba(0, 0, 0, 0.1);--dapp-kit-shadows-walletItemSelected:0px 2px 6px rgba(0, 0, 0, 0.05);--dapp-kit-fontWeights-normal:400;--dapp-kit-fontWeights-medium:500;--dapp-kit-fontWeights-bold:600;--dapp-kit-fontSizes-small:14px;--dapp-kit-fontSizes-medium:16px;--dapp-kit-fontSizes-large:18px;--dapp-kit-fontSizes-xlarge:20px;--dapp-kit-typography-fontFamily:ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";--dapp-kit-typography-fontStyle:normal;--dapp-kit-typography-lineHeight:1.3;--dapp-kit-typography-letterSpacing:1;}
  </style>
  <div
    class="flex flex-col items-center justify-center w-full grow"
  >
    <div
      class="h-full w-full items-center justify-center hidden"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-spinner animate-spin text-actionPrimary h-10"
        data-icon="spinner"
        data-prefix="fas"
        data-testid="loader"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M304 48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm0 416a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM48 304a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm464-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM142.9 437A48 48 0 1 0 75 369.1 48 48 0 1 0 142.9 437zm0-294.2A48 48 0 1 0 75 75a48 48 0 1 0 67.9 67.9zM369.1 437A48 48 0 1 0 437 369.1 48 48 0 1 0 369.1 437z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="h-full w-full p-10"
    >
      <div
        class="flex items-center justify-between w-full"
      >
        <div>
          <p
            class="font-semibold text-2xl text-primary"
          >
            Create New Stablecoin
          </p>
          <p
            class="text-sm text-riverBed mt-4"
          >
            
      Choose a name and ticker for your new stablecoin.
      You can also upload an icon for your stablecoin, which should be 300x300 pixels.
    
          </p>
        </div>
        <a
          class="w-20 rounded-xl"
          href="/"
        >
          <button
            class="bg-white text-primary rounded-xl shadow-button border-borderPrimary border-solid border font-semibold flex items-center justify-center transition hover:border-actionSecondary hover:text-actionPrimary disabled:bg-slate-300 disabled:border-slate-400 disabled:text-white h-10 w-full text-sm"
          >
            Cancel
          </button>
        </a>
      </div>
      <div
        class="flex items-center gap-10 mt-8"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="shadow-button border-actionSecondary border-solid border bg-buttonBgMain relative overflow-hidden after:content-[''] after:bg-buttonBgAfter after:w-full after:h-full after:absolute hover:bg-buttonBgAfter hover:text-actionPrimary transition disabled:bg-slate-300 disabled:bg-none disabled:border-slate-400 disabled:text-white [&>svg>path]:hover:stroke-actionPrimary text-white pointer-events-none flex items-center justify-center rounded-full font-normal text-base min-w-8 min-h-8 max-w-8 max-h-8 shadow-none"
          >
            1
          </div>
          <p
            class="text-primary"
          >
            Initial Details
          </p>
        </div>
        <div
          class="bg-borderPrimary w-16 h-[2px]"
        />
        <div
          class="flex items-center gap-4"
        >
          <div
            class="shadow-button border-solid border relative overflow-hidden after:bg-buttonBgAfter after:w-full after:h-full after:absolute hover:bg-buttonBgAfter hover:text-actionPrimary transition disabled:bg-slate-300 disabled:bg-none disabled:border-slate-400 disabled:text-white [&>svg>path]:hover:stroke-actionPrimary pointer-events-none flex items-center justify-center rounded-full font-normal text-base min-w-8 min-h-8 max-w-8 max-h-8 shadow-none bg-none bg-borderPrimary text-snowDrift border-borderPrimary after:content-none"
          >
            2
          </div>
          <p
            class="text-lavenderGrey"
          >
            Supply Details
          </p>
        </div>
        <div
          class="bg-borderPrimary w-16 h-[2px]"
        />
        <div
          class="flex items-center gap-4"
        >
          <div
            class="shadow-button border-solid border relative overflow-hidden after:bg-buttonBgAfter after:w-full after:h-full after:absolute hover:bg-buttonBgAfter hover:text-actionPrimary transition disabled:bg-slate-300 disabled:bg-none disabled:border-slate-400 disabled:text-white [&>svg>path]:hover:stroke-actionPrimary pointer-events-none flex items-center justify-center rounded-full font-normal text-base min-w-8 min-h-8 max-w-8 max-h-8 shadow-none bg-none bg-borderPrimary text-snowDrift border-borderPrimary after:content-none"
          >
            3
          </div>
          <p
            class="text-lavenderGrey"
          >
            Permissions
          </p>
        </div>
        <div
          class="bg-borderPrimary w-16 h-[2px]"
        />
        <div
          class="flex items-center gap-4"
        >
          <div
            class="shadow-button border-solid border relative overflow-hidden after:bg-buttonBgAfter after:w-full after:h-full after:absolute hover:bg-buttonBgAfter hover:text-actionPrimary transition disabled:bg-slate-300 disabled:bg-none disabled:border-slate-400 disabled:text-white [&>svg>path]:hover:stroke-actionPrimary pointer-events-none flex items-center justify-center rounded-full font-normal text-base min-w-8 min-h-8 max-w-8 max-h-8 shadow-none bg-none bg-borderPrimary text-snowDrift border-borderPrimary after:content-none"
          >
            4
          </div>
          <p
            class="text-lavenderGrey"
          >
            Roles Assignment
          </p>
        </div>
      </div>
      <div
        class="mt-16 grid grid-cols-10 gap-6"
      >
        <div
          class="bg-white border border-borderPrimary rounded-xl p-10 col-span-7 h-fit"
        >
          <form
            class=""
          >
            <p
              class="text-primary text-lg font-semibold"
            >
              Initial Details
            </p>
            <div
              class="mt-10 space-y-4"
            >
              <div>
                <div
                  class="flex items-center justify-between mb-2"
                >
                  <p
                    class="font-medium text-sm text-secondary"
                  >
                    Stablecoin Name
                    *
                  </p>
                  <p
                    class="font-medium text-secondary text-xs"
                  >
                    28 max symbols
                  </p>
                </div>
                <div
                  class="relative"
                >
                  <input
                    class="text-primary placeholder:text-hitGrey p-3 rounded-xl border border-borderPrimary focus:border-actionPrimary outline-none disabled:text-[#787878] disabled:bg-white w-full"
                    id="name"
                    maxlength="28"
                    name="name"
                    placeholder="Stablecoin Name"
                    type="text"
                  />
                </div>
              </div>
              <div>
                <div
                  class="flex items-center justify-between mb-2"
                >
                  <p
                    class="font-medium text-sm text-secondary"
                  >
                    Stablecoin Ticker
                    *
                  </p>
                  <p
                    class="font-medium text-secondary text-xs"
                  >
                    5 max symbols
                  </p>
                </div>
                <div
                  class="relative"
                >
                  <input
                    class="text-primary placeholder:text-hitGrey p-3 rounded-xl border border-borderPrimary focus:border-actionPrimary outline-none disabled:text-[#787878] disabled:bg-white w-full"
                    id="ticker"
                    maxlength="6"
                    name="ticker"
                    placeholder="Stablecoin Ticker"
                    type="text"
                  />
                </div>
              </div>
              <div>
                <div
                  class="flex items-center justify-start mb-2"
                >
                  <p
                    class="font-medium text-sm text-secondary"
                  >
                    Stablecoin Symbol
                  </p>
                </div>
                <div
                  class="flex items-center gap-3"
                >
                  <label
                    class="cursor-pointer h-10 w-20 text-xs bg-white text-primary rounded-xl shadow-button border-borderPrimary border-solid border font-semibold flex items-center justify-center transition hover:border-actionSecondary hover:text-actionPrimary disabled:bg-slate-300 disabled:border-slate-400 disabled:text-white"
                  >
                    Choose
                    <input
                      accept="image/png,image/jpeg"
                      class="hidden"
                      id="icon"
                      name="icon"
                      type="file"
                    />
                  </label>
                  <span
                    class="text-secondary text-sm"
                  >
                    JPG or PNG. 1MB max. 300x300 max
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex items-center justify-between gap-6 mt-10"
            >
              <button
                class="text-white rounded-xl shadow-button border-actionSecondary border-solid border font-semibold flex items-center justify-center bg-buttonBgMain relative overflow-hidden after:content-[''] after:bg-buttonBgAfter after:w-full after:h-full after:absolute hover:bg-buttonBgAfter hover:text-actionPrimary transition disabled:bg-slate-300 disabled:bg-none disabled:border-slate-400 disabled:text-white [&>svg>path]:hover:stroke-actionPrimary h-14 w-full"
                type="submit"
              >
                Next
              </button>
            </div>
          </form>
        </div>
        <div
          class="col-span-3 h-fit space-y-6"
        >
          <div
            class="border border-borderPrimary p-5 rounded-xl bg-white flex items-center justify-between"
          >
            <div
              class="flex items-center gap-3 text-sm font-medium text-[#15161E]"
            >
              <svg />
              Connected to the Testnet Network?
            </div>
            <div
              class="w-[18px] h-[18px] rounded-full flex items-center justify-center bg-error"
            >
              <svg
                class="[&>path]:stroke-white w-[7px]"
              />
            </div>
          </div>
          <div
            class="border border-borderPrimary p-5 rounded-xl bg-white flex items-center justify-between"
          >
            <div
              class="flex items-center gap-3 text-sm font-medium text-[#15161E]"
            >
              <svg />
              Having enough balance to execute?
            </div>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-spinner animate-spin text-actionPrimary w-[18px]"
              data-icon="spinner"
              data-prefix="fas"
              data-testid="loader"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M304 48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm0 416a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM48 304a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm464-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM142.9 437A48 48 0 1 0 75 369.1 48 48 0 1 0 142.9 437zm0-294.2A48 48 0 1 0 75 75a48 48 0 1 0 67.9 67.9zM369.1 437A48 48 0 1 0 437 369.1 48 48 0 1 0 369.1 437z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="font-medium flex items-center justify-between text-mistBlue w-full px-6 pb-6"
    >
      <p>
        Powered By
         
        <a
          href="https://pravica.io/"
          rel="noreferrer"
          target="_blank"
        >
          Pravica
        </a>
      </p>
      <p>
        Copyright
         
        2024
      </p>
    </div>
  </div>
</div>
`;

exports[`Create stablecoin page: Create stablecoin page with connected state: "Permissions" step: Snapshot 1`] = `
<div>
  <style>
    [data-dapp-kit] {--dapp-kit-blurs-modalOverlay:blur(0);--dapp-kit-backgroundColors-primaryButton:#F6F7F9;--dapp-kit-backgroundColors-primaryButtonHover:#F0F2F5;--dapp-kit-backgroundColors-outlineButtonHover:#F4F4F5;--dapp-kit-backgroundColors-modalOverlay:rgba(24 36 53 / 20%);--dapp-kit-backgroundColors-modalPrimary:white;--dapp-kit-backgroundColors-modalSecondary:#F7F8F8;--dapp-kit-backgroundColors-iconButton:transparent;--dapp-kit-backgroundColors-iconButtonHover:#F0F1F2;--dapp-kit-backgroundColors-dropdownMenu:#FFFFFF;--dapp-kit-backgroundColors-dropdownMenuSeparator:#F3F6F8;--dapp-kit-backgroundColors-walletItemSelected:white;--dapp-kit-backgroundColors-walletItemHover:#3C424226;--dapp-kit-borderColors-outlineButton:#E4E4E7;--dapp-kit-colors-primaryButton:#373737;--dapp-kit-colors-outlineButton:#373737;--dapp-kit-colors-iconButton:#000000;--dapp-kit-colors-body:#182435;--dapp-kit-colors-bodyMuted:#767A81;--dapp-kit-colors-bodyDanger:#FF794B;--dapp-kit-radii-small:6px;--dapp-kit-radii-medium:8px;--dapp-kit-radii-large:12px;--dapp-kit-radii-xlarge:16px;--dapp-kit-shadows-primaryButton:0px 4px 12px rgba(0, 0, 0, 0.1);--dapp-kit-shadows-walletItemSelected:0px 2px 6px rgba(0, 0, 0, 0.05);--dapp-kit-fontWeights-normal:400;--dapp-kit-fontWeights-medium:500;--dapp-kit-fontWeights-bold:600;--dapp-kit-fontSizes-small:14px;--dapp-kit-fontSizes-medium:16px;--dapp-kit-fontSizes-large:18px;--dapp-kit-fontSizes-xlarge:20px;--dapp-kit-typography-fontFamily:ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";--dapp-kit-typography-fontStyle:normal;--dapp-kit-typography-lineHeight:1.3;--dapp-kit-typography-letterSpacing:1;}
  </style>
  <div
    class="flex flex-col items-center justify-center w-full grow"
  >
    <div
      class="h-full w-full items-center justify-center hidden"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-spinner animate-spin text-actionPrimary h-10"
        data-icon="spinner"
        data-prefix="fas"
        data-testid="loader"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M304 48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm0 416a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM48 304a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm464-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM142.9 437A48 48 0 1 0 75 369.1 48 48 0 1 0 142.9 437zm0-294.2A48 48 0 1 0 75 75a48 48 0 1 0 67.9 67.9zM369.1 437A48 48 0 1 0 437 369.1 48 48 0 1 0 369.1 437z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="h-full w-full p-10"
    >
      <div
        class="flex items-center justify-between w-full"
      >
        <div>
          <p
            class="font-semibold text-2xl text-primary"
          >
            Create New Stablecoin
          </p>
          <p
            class="text-sm text-riverBed mt-4"
          >
            
      Core permissions for your stablecoin are presently default, given only to the issuer.
      Soon, you'll be able to manage them.
    
          </p>
        </div>
        <a
          class="w-20 rounded-xl"
          href="/"
        >
          <button
            class="bg-white text-primary rounded-xl shadow-button border-borderPrimary border-solid border font-semibold flex items-center justify-center transition hover:border-actionSecondary hover:text-actionPrimary disabled:bg-slate-300 disabled:border-slate-400 disabled:text-white h-10 w-full text-sm"
          >
            Cancel
          </button>
        </a>
      </div>
      <div
        class="flex items-center gap-10 mt-8"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="shadow-button border-actionSecondary border-solid border bg-buttonBgMain relative overflow-hidden after:content-[''] after:bg-buttonBgAfter after:w-full after:h-full after:absolute hover:bg-buttonBgAfter hover:text-actionPrimary transition disabled:bg-slate-300 disabled:bg-none disabled:border-slate-400 disabled:text-white [&>svg>path]:hover:stroke-actionPrimary text-white pointer-events-none flex items-center justify-center rounded-full font-normal text-base min-w-8 min-h-8 max-w-8 max-h-8 shadow-none"
          >
            1
          </div>
          <p
            class="text-primary"
          >
            Initial Details
          </p>
        </div>
        <div
          class="w-16 h-[2px] bg-actionSecondary"
        />
        <div
          class="flex items-center gap-4"
        >
          <div
            class="shadow-button border-actionSecondary border-solid border bg-buttonBgMain relative overflow-hidden after:content-[''] after:bg-buttonBgAfter after:w-full after:h-full after:absolute hover:bg-buttonBgAfter hover:text-actionPrimary transition disabled:bg-slate-300 disabled:bg-none disabled:border-slate-400 disabled:text-white [&>svg>path]:hover:stroke-actionPrimary text-white pointer-events-none flex items-center justify-center rounded-full font-normal text-base min-w-8 min-h-8 max-w-8 max-h-8 shadow-none"
          >
            2
          </div>
          <p
            class="text-primary"
          >
            Supply Details
          </p>
        </div>
        <div
          class="w-16 h-[2px] bg-actionSecondary"
        />
        <div
          class="flex items-center gap-4"
        >
          <div
            class="shadow-button border-actionSecondary border-solid border bg-buttonBgMain relative overflow-hidden after:content-[''] after:bg-buttonBgAfter after:w-full after:h-full after:absolute hover:bg-buttonBgAfter hover:text-actionPrimary transition disabled:bg-slate-300 disabled:bg-none disabled:border-slate-400 disabled:text-white [&>svg>path]:hover:stroke-actionPrimary text-white pointer-events-none flex items-center justify-center rounded-full font-normal text-base min-w-8 min-h-8 max-w-8 max-h-8 shadow-none"
          >
            3
          </div>
          <p
            class="text-primary"
          >
            Permissions
          </p>
        </div>
        <div
          class="bg-borderPrimary w-16 h-[2px]"
        />
        <div
          class="flex items-center gap-4"
        >
          <div
            class="shadow-button border-solid border relative overflow-hidden after:bg-buttonBgAfter after:w-full after:h-full after:absolute hover:bg-buttonBgAfter hover:text-actionPrimary transition disabled:bg-slate-300 disabled:bg-none disabled:border-slate-400 disabled:text-white [&>svg>path]:hover:stroke-actionPrimary pointer-events-none flex items-center justify-center rounded-full font-normal text-base min-w-8 min-h-8 max-w-8 max-h-8 shadow-none bg-none bg-borderPrimary text-snowDrift border-borderPrimary after:content-none"
          >
            4
          </div>
          <p
            class="text-lavenderGrey"
          >
            Roles Assignment
          </p>
        </div>
      </div>
      <div
        class="mt-16 grid grid-cols-10 gap-6"
      >
        <div
          class="bg-white border border-borderPrimary rounded-xl p-10 col-span-7 h-fit"
        >
          <form
            class=""
          >
            <div
              class="text-primary text-lg font-semibold flex items-center justify-between"
            >
              Assign Default Permissions
              <div>
                <label
                  class="flex items-center gap-2 cursor-pointer"
                >
                  <label
                    class="relative transition"
                  >
                    <input
                      class="
  invisible absolute inset-1/2
  [&+div]:checked:bg-actionPrimary [&+div]:checked:after:left-[calc(100%-18px)]
"
                      disabled=""
                      name="defaultPermissions"
                      readonly=""
                      type="checkbox"
                    />
                    <div
                      class="w-8 h-5 bg-slate-300 rounded-[833.33px] relative transition duration-500 after:content-[''] after:w-4 after:h-4 after:bg-white after:rounded-full after:transition-all after:absolute after:top-[2px] after:left-[2px]"
                    >
                      <svg
                        class="hidden duration-1000"
                      />
                    </div>
                  </label>
                  <span
                    class="text-sm text-mistBlue w-full"
                  />
                </label>
              </div>
            </div>
            <div
              class="mt-10 space-y-4"
            >
              <div
                class="flex items-center gap-[10px] text-primary"
              >
                <div
                  class="w-6 h-6 flex items-center justify-center rounded-full bg-twilightBlue"
                >
                  <svg
                    class="[&>path]:stroke-[#287F6E]"
                  />
                </div>
                Pause - Current Account
              </div>
              <div
                class="flex items-center gap-[10px] text-primary"
              >
                <div
                  class="w-6 h-6 flex items-center justify-center rounded-full bg-twilightBlue"
                >
                  <svg
                    class="[&>path]:stroke-[#287F6E]"
                  />
                </div>
                Freeze - Current Account
              </div>
              <div
                class="flex items-center gap-[10px] text-primary"
              >
                <div
                  class="w-6 h-6 flex items-center justify-center rounded-full bg-twilightBlue"
                >
                  <svg
                    class="[&>path]:stroke-[#287F6E]"
                  />
                </div>
                Mint - Current Account
              </div>
              <div
                class="flex items-center gap-[10px] text-primary"
              >
                <div
                  class="w-6 h-6 flex items-center justify-center rounded-full bg-twilightBlue"
                >
                  <svg
                    class="[&>path]:stroke-[#287F6E]"
                  />
                </div>
                Cash In - Current Account
              </div>
              <div
                class="flex items-center gap-[10px] text-primary"
              >
                <div
                  class="w-6 h-6 flex items-center justify-center rounded-full bg-twilightBlue"
                >
                  <svg
                    class="[&>path]:stroke-[#287F6E]"
                  />
                </div>
                Burn - Current Account
              </div>
            </div>
            <div
              class="flex items-center justify-between gap-6 mt-10"
            >
              <button
                class="bg-white text-primary rounded-xl shadow-button border-borderPrimary border-solid border font-semibold flex items-center justify-center transition hover:border-actionSecondary hover:text-actionPrimary disabled:bg-slate-300 disabled:border-slate-400 disabled:text-white h-14 w-full"
                type="button"
              >
                Back
              </button>
              <button
                class="text-white rounded-xl shadow-button border-actionSecondary border-solid border font-semibold flex items-center justify-center bg-buttonBgMain relative overflow-hidden after:content-[''] after:bg-buttonBgAfter after:w-full after:h-full after:absolute hover:bg-buttonBgAfter hover:text-actionPrimary transition disabled:bg-slate-300 disabled:bg-none disabled:border-slate-400 disabled:text-white [&>svg>path]:hover:stroke-actionPrimary h-14 w-full"
                type="submit"
              >
                Next
              </button>
            </div>
          </form>
        </div>
        <div
          class="bg-white border rounded-xl text-primary border-borderPrimary col-span-3 h-fit"
        >
          <p
            class="text-lg font-semibold p-5 border-b border-borderPrimary"
          >
            Preview Details
          </p>
          <div
            class="p-6 pt-5"
          >
            <div
              class="w-12 h-12 rounded-full bg-seashell bg-no-repeat bg-center bg-cover"
              style="background-image: url();"
            />
            <p
              class="flex items-center gap-1"
            >
              <span
                class="text-lg font-semibold text-primary"
              >
                $TS
              </span>
              <span
                class="text-mistBlue text-sm"
              >
                TEST COIN
              </span>
            </p>
            <p
              class="font-semibold mt-5"
            >
              Supply details
            </p>
            <div
              class="bg-borderPrimary h-[1px] mt-3 mb-4"
            />
            <div
              class="space-y-3"
            >
              <div
                class="flex items-center justify-between text-secondary text-sm"
              >
                <span>
                  Initial Supply
                </span>
                <span>
                  987
                </span>
              </div>
              <div
                class="flex items-center justify-between text-secondary text-sm"
              >
                <span>
                  Max Supply
                </span>
                <span>
                  123,456,789
                </span>
              </div>
              <div
                class="flex items-center justify-between text-secondary text-sm"
              >
                <span>
                  Supply Type
                </span>
                <span
                  class="capitalize"
                >
                  finite
                </span>
              </div>
              <div
                class="flex items-center justify-between text-secondary text-sm"
              >
                <span>
                  Decimals
                </span>
                <span>
                  7
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="font-medium flex items-center justify-between text-mistBlue w-full px-6 pb-6"
    >
      <p>
        Powered By
         
        <a
          href="https://pravica.io/"
          rel="noreferrer"
          target="_blank"
        >
          Pravica
        </a>
      </p>
      <p>
        Copyright
         
        2024
      </p>
    </div>
  </div>
</div>
`;

exports[`Create stablecoin page: Create stablecoin page with connected state: "Roles Assignment" step: Snapshot 1`] = `
<div>
  <style>
    [data-dapp-kit] {--dapp-kit-blurs-modalOverlay:blur(0);--dapp-kit-backgroundColors-primaryButton:#F6F7F9;--dapp-kit-backgroundColors-primaryButtonHover:#F0F2F5;--dapp-kit-backgroundColors-outlineButtonHover:#F4F4F5;--dapp-kit-backgroundColors-modalOverlay:rgba(24 36 53 / 20%);--dapp-kit-backgroundColors-modalPrimary:white;--dapp-kit-backgroundColors-modalSecondary:#F7F8F8;--dapp-kit-backgroundColors-iconButton:transparent;--dapp-kit-backgroundColors-iconButtonHover:#F0F1F2;--dapp-kit-backgroundColors-dropdownMenu:#FFFFFF;--dapp-kit-backgroundColors-dropdownMenuSeparator:#F3F6F8;--dapp-kit-backgroundColors-walletItemSelected:white;--dapp-kit-backgroundColors-walletItemHover:#3C424226;--dapp-kit-borderColors-outlineButton:#E4E4E7;--dapp-kit-colors-primaryButton:#373737;--dapp-kit-colors-outlineButton:#373737;--dapp-kit-colors-iconButton:#000000;--dapp-kit-colors-body:#182435;--dapp-kit-colors-bodyMuted:#767A81;--dapp-kit-colors-bodyDanger:#FF794B;--dapp-kit-radii-small:6px;--dapp-kit-radii-medium:8px;--dapp-kit-radii-large:12px;--dapp-kit-radii-xlarge:16px;--dapp-kit-shadows-primaryButton:0px 4px 12px rgba(0, 0, 0, 0.1);--dapp-kit-shadows-walletItemSelected:0px 2px 6px rgba(0, 0, 0, 0.05);--dapp-kit-fontWeights-normal:400;--dapp-kit-fontWeights-medium:500;--dapp-kit-fontWeights-bold:600;--dapp-kit-fontSizes-small:14px;--dapp-kit-fontSizes-medium:16px;--dapp-kit-fontSizes-large:18px;--dapp-kit-fontSizes-xlarge:20px;--dapp-kit-typography-fontFamily:ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";--dapp-kit-typography-fontStyle:normal;--dapp-kit-typography-lineHeight:1.3;--dapp-kit-typography-letterSpacing:1;}
  </style>
  <div
    class="flex flex-col items-center justify-center w-full grow"
  >
    <div
      class="h-full w-full items-center justify-center hidden"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-spinner animate-spin text-actionPrimary h-10"
        data-icon="spinner"
        data-prefix="fas"
        data-testid="loader"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M304 48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm0 416a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM48 304a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm464-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM142.9 437A48 48 0 1 0 75 369.1 48 48 0 1 0 142.9 437zm0-294.2A48 48 0 1 0 75 75a48 48 0 1 0 67.9 67.9zM369.1 437A48 48 0 1 0 437 369.1 48 48 0 1 0 369.1 437z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="h-full w-full p-10"
    >
      <div
        class="flex items-center justify-between w-full"
      >
        <div>
          <p
            class="font-semibold text-2xl text-primary"
          >
            Create New Stablecoin
          </p>
          <p
            class="text-sm text-riverBed mt-4"
          >
            Create a new stablecoin on SUI
          </p>
        </div>
        <a
          class="w-20 rounded-xl"
          href="/"
        >
          <button
            class="bg-white text-primary rounded-xl shadow-button border-borderPrimary border-solid border font-semibold flex items-center justify-center transition hover:border-actionSecondary hover:text-actionPrimary disabled:bg-slate-300 disabled:border-slate-400 disabled:text-white h-10 w-full text-sm"
          >
            Cancel
          </button>
        </a>
      </div>
      <div
        class="flex items-center gap-10 mt-8"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="shadow-button border-actionSecondary border-solid border bg-buttonBgMain relative overflow-hidden after:content-[''] after:bg-buttonBgAfter after:w-full after:h-full after:absolute hover:bg-buttonBgAfter hover:text-actionPrimary transition disabled:bg-slate-300 disabled:bg-none disabled:border-slate-400 disabled:text-white [&>svg>path]:hover:stroke-actionPrimary text-white pointer-events-none flex items-center justify-center rounded-full font-normal text-base min-w-8 min-h-8 max-w-8 max-h-8 shadow-none"
          >
            1
          </div>
          <p
            class="text-primary"
          >
            Initial Details
          </p>
        </div>
        <div
          class="w-16 h-[2px] bg-actionSecondary"
        />
        <div
          class="flex items-center gap-4"
        >
          <div
            class="shadow-button border-actionSecondary border-solid border bg-buttonBgMain relative overflow-hidden after:content-[''] after:bg-buttonBgAfter after:w-full after:h-full after:absolute hover:bg-buttonBgAfter hover:text-actionPrimary transition disabled:bg-slate-300 disabled:bg-none disabled:border-slate-400 disabled:text-white [&>svg>path]:hover:stroke-actionPrimary text-white pointer-events-none flex items-center justify-center rounded-full font-normal text-base min-w-8 min-h-8 max-w-8 max-h-8 shadow-none"
          >
            2
          </div>
          <p
            class="text-primary"
          >
            Supply Details
          </p>
        </div>
        <div
          class="w-16 h-[2px] bg-actionSecondary"
        />
        <div
          class="flex items-center gap-4"
        >
          <div
            class="shadow-button border-actionSecondary border-solid border bg-buttonBgMain relative overflow-hidden after:content-[''] after:bg-buttonBgAfter after:w-full after:h-full after:absolute hover:bg-buttonBgAfter hover:text-actionPrimary transition disabled:bg-slate-300 disabled:bg-none disabled:border-slate-400 disabled:text-white [&>svg>path]:hover:stroke-actionPrimary text-white pointer-events-none flex items-center justify-center rounded-full font-normal text-base min-w-8 min-h-8 max-w-8 max-h-8 shadow-none"
          >
            3
          </div>
          <p
            class="text-primary"
          >
            Permissions
          </p>
        </div>
        <div
          class="w-16 h-[2px] bg-actionSecondary"
        />
        <div
          class="flex items-center gap-4"
        >
          <div
            class="shadow-button border-actionSecondary border-solid border bg-buttonBgMain relative overflow-hidden after:content-[''] after:bg-buttonBgAfter after:w-full after:h-full after:absolute hover:bg-buttonBgAfter hover:text-actionPrimary transition disabled:bg-slate-300 disabled:bg-none disabled:border-slate-400 disabled:text-white [&>svg>path]:hover:stroke-actionPrimary text-white pointer-events-none flex items-center justify-center rounded-full font-normal text-base min-w-8 min-h-8 max-w-8 max-h-8 shadow-none"
          >
            4
          </div>
          <p
            class="text-primary"
          >
            Roles Assignment
          </p>
        </div>
      </div>
      <div
        class="mt-16 grid grid-cols-10 gap-6"
      >
        <div
          class="bg-white border border-borderPrimary rounded-xl p-10 col-span-7 h-fit"
        >
          <div
            class=""
          >
            <div
              class="text-primary text-lg font-semibold flex items-center justify-between"
            >
              Roles Assignment
            </div>
            <div
              class="mt-10 space-y-4 relative"
            >
              <p
                class="font-medium text-sm text-secondary mb-2"
              >
                Pause/Restart System 
              </p>
              <div
                class="relative"
              >
                <div
                  class="border border-borderPrimary py-[10px] px-[14px] rounded-lg cursor-pointer flex items-center justify-between transition-all"
                >
                  <div
                    class="text-sm font-medium space-x-2"
                  >
                    <span
                      class="text-primary"
                    >
                      Current Account
                    </span>
                    <span
                      class="text-riverBed text-base font-normal"
                    >
                      0x1111111111111111111111111111111111111111111111111111111111111111
                    </span>
                  </div>
                  <svg />
                </div>
                <div
                  class="border border-borderPrimary p-[5px] rounded-lg bg-white absolute w-[calc(100%+2px)] top-[calc(100%+4px)] left-[-1px] hidden z-50 shadow-rolesDropdown"
                >
                  <button
                    class=" flex items-center justify-between w-full px-2 py-[10px] cursor-pointer hover:bg-alabaster rounded-md "
                    type="button"
                  >
                    <span
                      class="text-sm font-medium space-x-2"
                    >
                      <span
                        class="text-primary"
                      >
                        Current Account
                      </span>
                      <span
                        class="text-riverBed text-base font-normal"
                      >
                        0x1111111111111111111111111111111111111111111111111111111111111111
                      </span>
                    </span>
                    <svg
                      class="[&>path]:stroke-[#7F56D9]"
                    />
                  </button>
                  <button
                    class=" w-full px-2 py-[10px] cursor-pointer hover:bg-alabaster rounded-md text-left text-actionPrimary "
                    type="button"
                  >
                    + Assign another account
                  </button>
                </div>
              </div>
              <p
                class="font-medium text-sm text-secondary mb-2"
              >
                Mint/Burn
              </p>
              <div
                class="relative"
              >
                <div
                  class="border border-borderPrimary py-[10px] px-[14px] rounded-lg cursor-pointer flex items-center justify-between transition-all"
                >
                  <div
                    class="text-sm font-medium space-x-2"
                  >
                    <span
                      class="text-primary"
                    >
                      Current Account
                    </span>
                    <span
                      class="text-riverBed text-base font-normal"
                    >
                      0x1111111111111111111111111111111111111111111111111111111111111111
                    </span>
                  </div>
                  <svg />
                </div>
                <div
                  class="border border-borderPrimary p-[5px] rounded-lg bg-white absolute w-[calc(100%+2px)] top-[calc(100%+4px)] left-[-1px] hidden z-50 shadow-rolesDropdown"
                >
                  <button
                    class=" flex items-center justify-between w-full px-2 py-[10px] cursor-pointer hover:bg-alabaster rounded-md "
                    type="button"
                  >
                    <span
                      class="text-sm font-medium space-x-2"
                    >
                      <span
                        class="text-primary"
                      >
                        Current Account
                      </span>
                      <span
                        class="text-riverBed text-base font-normal"
                      >
                        0x1111111111111111111111111111111111111111111111111111111111111111
                      </span>
                    </span>
                    <svg
                      class="[&>path]:stroke-[#7F56D9]"
                    />
                  </button>
                  <button
                    class=" w-full px-2 py-[10px] cursor-pointer hover:bg-alabaster rounded-md text-left text-actionPrimary "
                    type="button"
                  >
                    + Assign another account
                  </button>
                </div>
              </div>
              <p
                class="font-medium text-sm text-secondary mb-2"
              >
                Cash In
              </p>
              <div
                class="relative"
              >
                <div
                  class="border border-borderPrimary py-[10px] px-[14px] rounded-lg cursor-pointer flex items-center justify-between transition-all"
                >
                  <div
                    class="text-sm font-medium space-x-2"
                  >
                    <span
                      class="text-primary"
                    >
                      Current Account
                    </span>
                    <span
                      class="text-riverBed text-base font-normal"
                    >
                      0x1111111111111111111111111111111111111111111111111111111111111111
                    </span>
                  </div>
                  <svg />
                </div>
                <div
                  class="border border-borderPrimary p-[5px] rounded-lg bg-white absolute w-[calc(100%+2px)] top-[calc(100%+4px)] left-[-1px] hidden z-50 shadow-rolesDropdown"
                >
                  <button
                    class=" flex items-center justify-between w-full px-2 py-[10px] cursor-pointer hover:bg-alabaster rounded-md "
                    type="button"
                  >
                    <span
                      class="text-sm font-medium space-x-2"
                    >
                      <span
                        class="text-primary"
                      >
                        Current Account
                      </span>
                      <span
                        class="text-riverBed text-base font-normal"
                      >
                        0x1111111111111111111111111111111111111111111111111111111111111111
                      </span>
                    </span>
                    <svg
                      class="[&>path]:stroke-[#7F56D9]"
                    />
                  </button>
                  <button
                    class=" w-full px-2 py-[10px] cursor-pointer hover:bg-alabaster rounded-md text-left text-actionPrimary "
                    type="button"
                  >
                    + Assign another account
                  </button>
                </div>
              </div>
            </div>
            <div
              class="flex items-center justify-between gap-6 mt-10"
            >
              <button
                class="bg-white text-primary rounded-xl shadow-button border-borderPrimary border-solid border font-semibold flex items-center justify-center transition hover:border-actionSecondary hover:text-actionPrimary disabled:bg-slate-300 disabled:border-slate-400 disabled:text-white h-14 w-full"
                type="button"
              >
                Back
              </button>
              <button
                class="text-white rounded-xl shadow-button border-actionSecondary border-solid border font-semibold flex items-center justify-center bg-buttonBgMain relative overflow-hidden after:content-[''] after:bg-buttonBgAfter after:w-full after:h-full after:absolute hover:bg-buttonBgAfter hover:text-actionPrimary transition disabled:bg-slate-300 disabled:bg-none disabled:border-slate-400 disabled:text-white [&>svg>path]:hover:stroke-actionPrimary h-14 w-full"
                type="submit"
              >
                Create
              </button>
            </div>
          </div>
        </div>
        <div
          class="bg-white border rounded-xl text-primary border-borderPrimary col-span-3 h-fit"
        >
          <p
            class="text-lg font-semibold p-5 border-b border-borderPrimary"
          >
            Preview Details
          </p>
          <div
            class="p-6 pt-5"
          >
            <div
              class="w-12 h-12 rounded-full bg-seashell bg-no-repeat bg-center bg-cover"
              style="background-image: url();"
            />
            <p
              class="flex items-center gap-1"
            >
              <span
                class="text-lg font-semibold text-primary"
              >
                $TS
              </span>
              <span
                class="text-mistBlue text-sm"
              >
                TEST COIN
              </span>
            </p>
            <p
              class="font-semibold mt-5"
            >
              Supply details
            </p>
            <div
              class="bg-borderPrimary h-[1px] mt-3 mb-4"
            />
            <div
              class="space-y-3"
            >
              <div
                class="flex items-center justify-between text-secondary text-sm"
              >
                <span>
                  Initial Supply
                </span>
                <span>
                  987
                </span>
              </div>
              <div
                class="flex items-center justify-between text-secondary text-sm"
              >
                <span>
                  Max Supply
                </span>
                <span>
                  123,456,789
                </span>
              </div>
              <div
                class="flex items-center justify-between text-secondary text-sm"
              >
                <span>
                  Supply Type
                </span>
                <span
                  class="capitalize"
                >
                  finite
                </span>
              </div>
              <div
                class="flex items-center justify-between text-secondary text-sm"
              >
                <span>
                  Decimals
                </span>
                <span>
                  7
                </span>
              </div>
            </div>
            <p
              class="font-semibold mt-5"
            >
              Permissions
            </p>
            <div
              class="bg-borderPrimary h-[1px] mt-3 mb-4"
            />
            <div
              class="space-y-4 relative"
            >
              <div
                class=" h-full border-l border-l-lavenderGrey border-dashed absolute bottom-0 left-[7px] z-0 "
              />
              <div
                class="flex items-center gap-3 text-mistBlue text-sm font-medium bg-white relative z-10"
              >
                <div
                  class="w-4 h-4 min-w-4 min-h-4 flex items-center justify-center rounded-full bg-[#40C4AA]"
                >
                  <svg
                    class="[&>path]:stroke-white w-[8px] h-[8px]"
                  />
                </div>
                Pause - Current Account
              </div>
              <div
                class="flex items-center gap-3 text-mistBlue text-sm font-medium bg-white relative z-10"
              >
                <div
                  class="w-4 h-4 min-w-4 min-h-4 flex items-center justify-center rounded-full bg-[#40C4AA]"
                >
                  <svg
                    class="[&>path]:stroke-white w-[8px] h-[8px]"
                  />
                </div>
                Freeze - Current Account
              </div>
              <div
                class="flex items-center gap-3 text-mistBlue text-sm font-medium bg-white relative z-10"
              >
                <div
                  class="w-4 h-4 min-w-4 min-h-4 flex items-center justify-center rounded-full bg-[#40C4AA]"
                >
                  <svg
                    class="[&>path]:stroke-white w-[8px] h-[8px]"
                  />
                </div>
                Mint - Current Account
              </div>
              <div
                class="flex items-center gap-3 text-mistBlue text-sm font-medium bg-white relative z-10"
              >
                <div
                  class="w-4 h-4 min-w-4 min-h-4 flex items-center justify-center rounded-full bg-[#40C4AA]"
                >
                  <svg
                    class="[&>path]:stroke-white w-[8px] h-[8px]"
                  />
                </div>
                Cash In - Current Account
              </div>
              <div
                class="flex items-center gap-3 text-mistBlue text-sm font-medium bg-white relative z-10"
              >
                <div
                  class="w-4 h-4 min-w-4 min-h-4 flex items-center justify-center rounded-full bg-[#40C4AA]"
                >
                  <svg
                    class="[&>path]:stroke-white w-[8px] h-[8px]"
                  />
                </div>
                Burn - Current Account
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="font-medium flex items-center justify-between text-mistBlue w-full px-6 pb-6"
    >
      <p>
        Powered By
         
        <a
          href="https://pravica.io/"
          rel="noreferrer"
          target="_blank"
        >
          Pravica
        </a>
      </p>
      <p>
        Copyright
         
        2024
      </p>
    </div>
  </div>
</div>
`;

exports[`Create stablecoin page: Create stablecoin page with connected state: "Supply Details" step: Snapshot 1`] = `
<div>
  <style>
    [data-dapp-kit] {--dapp-kit-blurs-modalOverlay:blur(0);--dapp-kit-backgroundColors-primaryButton:#F6F7F9;--dapp-kit-backgroundColors-primaryButtonHover:#F0F2F5;--dapp-kit-backgroundColors-outlineButtonHover:#F4F4F5;--dapp-kit-backgroundColors-modalOverlay:rgba(24 36 53 / 20%);--dapp-kit-backgroundColors-modalPrimary:white;--dapp-kit-backgroundColors-modalSecondary:#F7F8F8;--dapp-kit-backgroundColors-iconButton:transparent;--dapp-kit-backgroundColors-iconButtonHover:#F0F1F2;--dapp-kit-backgroundColors-dropdownMenu:#FFFFFF;--dapp-kit-backgroundColors-dropdownMenuSeparator:#F3F6F8;--dapp-kit-backgroundColors-walletItemSelected:white;--dapp-kit-backgroundColors-walletItemHover:#3C424226;--dapp-kit-borderColors-outlineButton:#E4E4E7;--dapp-kit-colors-primaryButton:#373737;--dapp-kit-colors-outlineButton:#373737;--dapp-kit-colors-iconButton:#000000;--dapp-kit-colors-body:#182435;--dapp-kit-colors-bodyMuted:#767A81;--dapp-kit-colors-bodyDanger:#FF794B;--dapp-kit-radii-small:6px;--dapp-kit-radii-medium:8px;--dapp-kit-radii-large:12px;--dapp-kit-radii-xlarge:16px;--dapp-kit-shadows-primaryButton:0px 4px 12px rgba(0, 0, 0, 0.1);--dapp-kit-shadows-walletItemSelected:0px 2px 6px rgba(0, 0, 0, 0.05);--dapp-kit-fontWeights-normal:400;--dapp-kit-fontWeights-medium:500;--dapp-kit-fontWeights-bold:600;--dapp-kit-fontSizes-small:14px;--dapp-kit-fontSizes-medium:16px;--dapp-kit-fontSizes-large:18px;--dapp-kit-fontSizes-xlarge:20px;--dapp-kit-typography-fontFamily:ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";--dapp-kit-typography-fontStyle:normal;--dapp-kit-typography-lineHeight:1.3;--dapp-kit-typography-letterSpacing:1;}
  </style>
  <div
    class="flex flex-col items-center justify-center w-full grow"
  >
    <div
      class="h-full w-full items-center justify-center hidden"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-spinner animate-spin text-actionPrimary h-10"
        data-icon="spinner"
        data-prefix="fas"
        data-testid="loader"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M304 48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm0 416a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM48 304a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm464-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM142.9 437A48 48 0 1 0 75 369.1 48 48 0 1 0 142.9 437zm0-294.2A48 48 0 1 0 75 75a48 48 0 1 0 67.9 67.9zM369.1 437A48 48 0 1 0 437 369.1 48 48 0 1 0 369.1 437z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="h-full w-full p-10"
    >
      <div
        class="flex items-center justify-between w-full"
      >
        <div>
          <p
            class="font-semibold text-2xl text-primary"
          >
            Create New Stablecoin
          </p>
          <p
            class="text-sm text-riverBed mt-4"
          >
            
      The initial supply will be transferred to your account upon the completion of your project.
      Choose a supply type and decimal count that suits your needs.
    
          </p>
        </div>
        <a
          class="w-20 rounded-xl"
          href="/"
        >
          <button
            class="bg-white text-primary rounded-xl shadow-button border-borderPrimary border-solid border font-semibold flex items-center justify-center transition hover:border-actionSecondary hover:text-actionPrimary disabled:bg-slate-300 disabled:border-slate-400 disabled:text-white h-10 w-full text-sm"
          >
            Cancel
          </button>
        </a>
      </div>
      <div
        class="flex items-center gap-10 mt-8"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="shadow-button border-actionSecondary border-solid border bg-buttonBgMain relative overflow-hidden after:content-[''] after:bg-buttonBgAfter after:w-full after:h-full after:absolute hover:bg-buttonBgAfter hover:text-actionPrimary transition disabled:bg-slate-300 disabled:bg-none disabled:border-slate-400 disabled:text-white [&>svg>path]:hover:stroke-actionPrimary text-white pointer-events-none flex items-center justify-center rounded-full font-normal text-base min-w-8 min-h-8 max-w-8 max-h-8 shadow-none"
          >
            1
          </div>
          <p
            class="text-primary"
          >
            Initial Details
          </p>
        </div>
        <div
          class="w-16 h-[2px] bg-actionSecondary"
        />
        <div
          class="flex items-center gap-4"
        >
          <div
            class="shadow-button border-actionSecondary border-solid border bg-buttonBgMain relative overflow-hidden after:content-[''] after:bg-buttonBgAfter after:w-full after:h-full after:absolute hover:bg-buttonBgAfter hover:text-actionPrimary transition disabled:bg-slate-300 disabled:bg-none disabled:border-slate-400 disabled:text-white [&>svg>path]:hover:stroke-actionPrimary text-white pointer-events-none flex items-center justify-center rounded-full font-normal text-base min-w-8 min-h-8 max-w-8 max-h-8 shadow-none"
          >
            2
          </div>
          <p
            class="text-primary"
          >
            Supply Details
          </p>
        </div>
        <div
          class="bg-borderPrimary w-16 h-[2px]"
        />
        <div
          class="flex items-center gap-4"
        >
          <div
            class="shadow-button border-solid border relative overflow-hidden after:bg-buttonBgAfter after:w-full after:h-full after:absolute hover:bg-buttonBgAfter hover:text-actionPrimary transition disabled:bg-slate-300 disabled:bg-none disabled:border-slate-400 disabled:text-white [&>svg>path]:hover:stroke-actionPrimary pointer-events-none flex items-center justify-center rounded-full font-normal text-base min-w-8 min-h-8 max-w-8 max-h-8 shadow-none bg-none bg-borderPrimary text-snowDrift border-borderPrimary after:content-none"
          >
            3
          </div>
          <p
            class="text-lavenderGrey"
          >
            Permissions
          </p>
        </div>
        <div
          class="bg-borderPrimary w-16 h-[2px]"
        />
        <div
          class="flex items-center gap-4"
        >
          <div
            class="shadow-button border-solid border relative overflow-hidden after:bg-buttonBgAfter after:w-full after:h-full after:absolute hover:bg-buttonBgAfter hover:text-actionPrimary transition disabled:bg-slate-300 disabled:bg-none disabled:border-slate-400 disabled:text-white [&>svg>path]:hover:stroke-actionPrimary pointer-events-none flex items-center justify-center rounded-full font-normal text-base min-w-8 min-h-8 max-w-8 max-h-8 shadow-none bg-none bg-borderPrimary text-snowDrift border-borderPrimary after:content-none"
          >
            4
          </div>
          <p
            class="text-lavenderGrey"
          >
            Roles Assignment
          </p>
        </div>
      </div>
      <div
        class="mt-16 grid grid-cols-10 gap-6"
      >
        <div
          class="bg-white border border-borderPrimary rounded-xl p-10 col-span-7 h-fit"
        >
          <form
            class=""
          >
            <p
              class="text-primary text-lg font-semibold"
            >
              Supply Details
            </p>
            <div
              class="mt-10 space-y-4"
            >
              <div>
                <div
                  class="flex items-center justify-between mb-2"
                >
                  <p
                    class="font-medium text-sm text-secondary"
                  >
                    Initial Supply
                    *
                  </p>
                  <p
                    class="font-medium text-secondary text-xs"
                  >
                    99,999,999,999 max
                  </p>
                </div>
                <div
                  class="relative"
                >
                  <input
                    class="text-primary placeholder:text-hitGrey p-3 rounded-xl border border-borderPrimary focus:border-actionPrimary outline-none disabled:text-[#787878] disabled:bg-white w-full appearance-none"
                    id="initialSupply"
                    maxlength="14"
                    name="initialSupply"
                    placeholder="Initial Supply"
                    type="text"
                  />
                </div>
              </div>
              <div>
                <p
                  class="font-medium text-sm text-secondary mb-2"
                >
                  Supply Type
                  *
                </p>
                <div
                  class="relative"
                >
                  <select
                    class="p-3 rounded-xl border border-borderPrimary outline-none appearance-none text-secondary has-[>option:checked:not([value=""])]:text-primary w-full"
                    name="supplyType"
                  >
                    <option
                      class="text-hitGrey"
                      disabled=""
                      selected=""
                      value=""
                    >
                      Infinite/Finite
                    </option>
                    <option
                      value="infinite"
                    >
                      Infinite
                    </option>
                    <option
                      value="finite"
                    >
                      Finite
                    </option>
                  </select>
                  <svg
                    class="absolute right-4 top-1/2 -translate-y-1/2"
                  />
                </div>
              </div>
              <div>
                <div
                  class="flex items-center justify-between mb-2"
                >
                  <p
                    class="font-medium text-sm text-secondary"
                  >
                    Decimals
                    *
                  </p>
                  <p
                    class="font-medium text-secondary text-xs"
                  >
                    16 max
                  </p>
                </div>
                <div
                  class="relative"
                >
                  <input
                    class="text-primary placeholder:text-hitGrey p-3 rounded-xl border border-borderPrimary focus:border-actionPrimary outline-none disabled:text-[#787878] disabled:bg-white w-full appearance-none"
                    id="decimals"
                    name="decimals"
                    placeholder="Decimals"
                    type="text"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex items-center justify-between gap-6 mt-10"
            >
              <button
                class="bg-white text-primary rounded-xl shadow-button border-borderPrimary border-solid border font-semibold flex items-center justify-center transition hover:border-actionSecondary hover:text-actionPrimary disabled:bg-slate-300 disabled:border-slate-400 disabled:text-white h-14 w-full"
                type="button"
              >
                Back
              </button>
              <button
                class="text-white rounded-xl shadow-button border-actionSecondary border-solid border font-semibold flex items-center justify-center bg-buttonBgMain relative overflow-hidden after:content-[''] after:bg-buttonBgAfter after:w-full after:h-full after:absolute hover:bg-buttonBgAfter hover:text-actionPrimary transition disabled:bg-slate-300 disabled:bg-none disabled:border-slate-400 disabled:text-white [&>svg>path]:hover:stroke-actionPrimary h-14 w-full"
                type="submit"
              >
                Next
              </button>
            </div>
          </form>
        </div>
        <div
          class="bg-white border rounded-xl text-primary border-borderPrimary col-span-3 h-fit"
        >
          <p
            class="text-lg font-semibold p-5 border-b border-borderPrimary"
          >
            Preview Details
          </p>
          <div
            class="p-6 pt-5"
          >
            <div
              class="w-12 h-12 rounded-full bg-seashell bg-no-repeat bg-center bg-cover"
              style="background-image: url();"
            />
            <p
              class="flex items-center gap-1"
            >
              <span
                class="text-lg font-semibold text-primary"
              >
                $TS
              </span>
              <span
                class="text-mistBlue text-sm"
              >
                TEST COIN
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="font-medium flex items-center justify-between text-mistBlue w-full px-6 pb-6"
    >
      <p>
        Powered By
         
        <a
          href="https://pravica.io/"
          rel="noreferrer"
          target="_blank"
        >
          Pravica
        </a>
      </p>
      <p>
        Copyright
         
        2024
      </p>
    </div>
  </div>
</div>
`;
